[gd_scene load_steps=2 format=3 uid="uid://cjyqwudsqgmsu"]

[ext_resource type="Script" path="res://scenes/interfaces/home/log_entry.gd" id="1_8gng6"]

[node name="LogEntry" type="Control" groups=["game_events"]]
custom_minimum_size = Vector2(0, 50)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_8gng6")

[node name="Background" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="MC" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MC"]
layout_mode = 2

[node name="DeadLabel" type="Label" parent="Background/MC/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Egon"

[node name="InfoLabel" type="Label" parent="Background/MC/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = " was killed by "

[node name="KillerLabel" type="Label" parent="Background/MC/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Tower"

[node name="MatchTimeLabel" type="Label" parent="Background/MC/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"HeaderSmall"
text = "Time"
